sound-sprouts.css
* {
  padding:0;
  margin:0;
}

@font-face {
  font-family: myFirstFont;
  src: url(myfont.woff2);
}

section {
  display: flex;
  display: flex;
  justify-content: center;
  align-items: center;
  height:100vh;
}

.landing {
  background:linear-gradient(#e1f6e1, #2eb9da, #2f740a, #5c2d19);
}

.about {
  background: #2f8ca1;
}

.about > div {
  width:460px;
  margin-right:50px;
}

.about > img {
  height: 640px;
  border-radius:10px;
}

.about h2 {
  color: #f1fbd2;
  font: normal normal normal 40px/1.35em futura-lt-w01-book,sans-serif;
  margin-bottom:40px;
}

.about h3 {
  text-align: start;
  font: normal normal normal 18px/1.75em myfirstfont,cursive;
  pointer-events: auto;
  letter-spacing: normal;
  line-height: 1.75em;
  color: #FFFFFF;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  vertical-align: baseline;
  background: transparent;
  font-weight: 300;

  margin-bottom:30px;
}

.about p {
  font: normal normal normal 15px/1.875em avenir-lt-w01_35-light1475496,sans-serif;
  pointer-events: auto;
  letter-spacing: normal;
  text-align: left;
  line-height: 1.875em;
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  vertical-align: baseline;
  background: transparent;
  color: #FFFFFF;
}


#logo {
  width:500px;
}

#name {
  position:absolute;
  top:80;
  left:600;
  width:500px;
}

#flowers {
  background-image: url("flowers.png");
  height:600px;
  width:100%;
  position: absolute;
  bottom: 0px;
  opacity: 0.15;
}

#content {
  position:relative;
  margin: 0 auto;
  width: 1200px;
  height: 100vh;
}

.stalk {
  position:absolute;
  bottom:0;
  height:400px;
}

#stalk-left {
  left:0;
}
#stalk-right {
  right:0;
}

.dest{
  position: absolute;
  left: 250;
  height: 50px;
  width: 850px;
}
#destTop {
  top: 600;
}

#destBot {
  top: 670;
  left:270;
}

.letter {
  position:absolute;
  font-size: 45px;
  line-height: 45px;
  text-align:center;
  font-family:"noteworthy";

  background: -webkit-linear-gradient(#b9e8e0, #2bb9dc);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;

  filter: drop-shadow(2px 2px #333);
}



/* ----------- iPhone X ----------- */

/* Portrait and Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) { 
    /* Nothing here yet... */
}

/* Portrait */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (orientation: portrait) { 

    section.about {
      text-align:center;
      flex-wrap:wrap;
    }

    .about > img {
      height:auto;
    }

    .about > div {
      width:90%;
      margin:0 auto;
    }

    .about h2 {
      font-size:4em;
      text-align:left;
    }
    .about h3 {
      font-size:3em;
    }

    .about p {
      font-size:2em;
    }
    #content {
      text-align:center;
      width:100%;
      height:1650px;
    }
    #logo {
      margin:50 auto 0 -20;
    }

    #name {
      margin:50 auto;
      position:static;
    }

    .stalk {
      height:600px;
    }

    .dest {
      left:150;
    }

    #destTop {
      top: 1050;
    }

    #destBot {
      top: 1120;
    }
}

/* Landscape */
@media only screen 
  and (min-device-width: 375px) 
  and (max-device-width: 812px) 
  and (orientation: landscape) { 
    #content {
      margin:0 auto;
      width:1000px;
      height:470px;
    }
    #logo {
      width: 300px;
      left: 150px;
      position: absolute;
    }

    #name {
      width: 300px;
      left: 500;
      top: 50;
      position: absolute;
    }

    .stalk {
      height:350px;
    }

    .dest {
      left:150;
    }

    #destTop {
      top: 250;
    }

    #destBot {
      top: 320;
    }

    .about > img {
      height:450px;
    }
}

